--- a/Tizedes/style.css
+++ b/Tizedes/style.css
@@ -1,17 +1,18 @@
 body{
     color: white;
     background-image: url(hatter.png);
-    text-align: center;
 }
 
-a:link a:hover a:visited a:active{
+a:link,a:hover,a:visited,a:active{
     color: #c0c0c0;
+    
 }
 
 #foTabla{
     border: none;
     border-spacing: 0px;
     width: 1000px;
+    text-align: center;
 }
 
 td{
@@ -23,11 +24,33 @@ td{
 }
 
 .kozepre{
-    display: block;
+    margin: 0 auto;
 }
 
 #belsoTabla{
     border: none;
     margin: 0 auto;
     border-spacing: 5px;
+}
+
+.linkek{
+    font-style: italic;
+    text-align: right;
+}
+
+hr{
+    width: 80%;
+}
+
+.felKover{
+    font-weight: bold;
+}
+
+q{
+    font-weight: bold;
+    font-style: italic;
+}
+
+#cim{
+    text-align: center;
 }
