--- a/Süti/suti.css
+++ b/Süti/suti.css
@@ -3,9 +3,11 @@
     border-style: none solid;
 	border-color:gray;
     border-width: 20px;
+    width: 70%;
+    margin-left: 20px;
 }
 .ritka{
-    
+    letter-spacing: 4px;
 }
 #kep{
     width:40%;
@@ -16,6 +18,8 @@
     border-radius: 10px;
     border-style: solid;
     float: right;
+    margin: 30px;
+    border: 3px solid;
 }
 input{
     font-family:cursive; 
@@ -25,5 +29,11 @@ input{
 body{
     font-family: cursive;
     text-align: justify;
-    background-image: ;
+    background-image: url(/hatter.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+ul{
+    font-weight: bold;
 }
